--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.9",
+    "antd": "^4.16.0",
     "next": "latest",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
